<resources>

    <string name="app_name">숨생</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="id">아이디</string>
    <string name="help">1:1문의</string>
    <string name="permodify">개인정보 수정</string>
    <string name="passwd">비밀번호</string>
    <string name="storage">저장</string>
    <string name="school">학력</string>
    <string name="alba">경력</string>
    <string name="helpsend">문의보내기</string>
    <string name="announcement">공지사항</string>
    <string name="search_title">글 검색</string>
    <string name="write">글 쓰기</string>
    <string name="myPage">마이 페이지</string>
    <string name="title">TITLE</string>
    <string name="major">학과</string>
    <string name="history">이전 검색 기록</string>
    <string name="title1">제목</string>
    <string name="editProfile">개인 정보 수정</string>
    <string name="check_point">결제</string>
    <string name="ask">1:1 문의</string>
    <string name="check_answer">글 작성목록\n확인</string>
    <string name="check_myList">작성 글\n목록 확인</string>
    <string name="helpSend">문의 보내기</string>
    <string name="modifyPost">글 수정</string>
    <string name="personalprofile">개인 프로필 이동</string>
    <string name="email">이메일</string>
    <string name="review">후기 보내기</string>
    <string name="every_avg">평균</string>
    <string name="writinglist">글 작성 목록</string>
    <string name="ranking">랭킹</string>
    <string name="category">카테고리</string>
    <string name="studentsearch">학생 검색</string>


</resources>