<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btEditBack"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:background="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="9dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/edit_pwd"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/edit_id"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/edit_id"
        android:layout_width="350dp"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permodify"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.421" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8507295" />


    <EditText
        android:id="@+id/edit_pwd"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="38dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwd"
        app:layout_constraintBottom_toTopOf="@+id/edit_edu"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit_edu"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/school"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="167dp"
        android:layout_height="51dp"
        android:backgroundTint="#000000"
        android:text="@string/storage"
        android:textColor="#FFD600"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.482" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="206dp"
        android:layout_height="180dp"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="152dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/perprofile" />

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/floatingActionButton"-->
    <!--        android:layout_width="120dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:clickable="true"-->
    <!--        app:backgroundTint="#FFFFFF"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/textView"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:srcCompat="@drawable/baseline_keyboard_backspace_24" />-->

</androidx.constraintlayout.widget.ConstraintLayout>